Adjust Floors for Bidadjustments (#3910)