@@ -7,15 +7,13 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
-import org.prebid.server.bidadjustments.model.BidAdjustments;
+import org.prebid.server.bidadjustments.model.BidAdjustmentsRule;
 import org.prebid.server.bidder.model.Price;
 import org.prebid.server.currency.CurrencyConversionService;
-import org.prebid.server.proto.openrtb.ext.request.ExtRequestBidAdjustmentsRule;
-import org.prebid.server.proto.openrtb.ext.request.ImpMediaType;
 
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -26,6 +24,8 @@ import static org.mockito.Mockito.verifyNoInteractions;
 import static org.prebid.server.bidadjustments.model.BidAdjustmentType.CPM;
 import static org.prebid.server.bidadjustments.model.BidAdjustmentType.MULTIPLIER;
 import static org.prebid.server.bidadjustments.model.BidAdjustmentType.STATIC;
+import static org.prebid.server.proto.openrtb.ext.request.ImpMediaType.banner;
+import static org.prebid.server.proto.openrtb.ext.request.ImpMediaType.video_outstream;
 
 @ExtendWith(MockitoExtension.class)
 public class BidAdjustmentsResolverTest extends VertxTest {
@@ -33,11 +33,14 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     @Mock(strictness = LENIENT)
     private CurrencyConversionService currencyService;
 
+    @Mock(strictness = LENIENT)
+    private BidAdjustmentsRulesResolver bidAdjustmentsRulesResolver;
+
     private BidAdjustmentsResolver target;
 
     @BeforeEach
     public void before() {
-        target = new BidAdjustmentsResolver(currencyService);
+        target = new BidAdjustmentsResolver(currencyService, bidAdjustmentsRulesResolver);
 
         given(currencyService.convertCurrency(any(), any(), any(), any())).willAnswer(invocation -> {
             final BigDecimal initialPrice = (BigDecimal) invocation.getArguments()[0];
@@ -46,18 +49,18 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldPickAndApplyRulesBySpecificMediaType() {
+    public void resolveShouldApplyStaticRule() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "banner|*|*", List.of(givenStatic("15", "EUR")),
-                "*|*|*", List.of(givenStatic("25", "UAH"))));
+        final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, banner, "seat", "bidderName", "dealId"))
+                .willReturn(List.of(givenStatic("15", "EUR")));
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
-                BidRequest.builder().build(),
-                givenBidAdjustments,
-                ImpMediaType.banner,
+                givenBidRequest,
+                banner,
+                "seat",
                 "bidderName",
                 "dealId");
 
@@ -67,20 +70,18 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldPickAndApplyRulesByWildcardMediaType() {
+    public void resolveShouldApplyCpmRule() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "banner|*|*", List.of(givenCpm("15", "EUR")),
-                "*|*|*", List.of(givenCpm("25", "UAH"))));
-
         final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, video_outstream, "seat", "bidderName", "dealId"))
+                .willReturn(List.of(givenCpm("25", "UAH")));
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
                 givenBidRequest,
-                givenBidAdjustments,
-                ImpMediaType.video_outstream,
+                video_outstream,
+                "seat",
                 "bidderName",
                 "dealId");
 
@@ -90,18 +91,18 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldPickAndApplyRulesBySpecificBidder() {
+    public void resolveShouldApplyMultiplierRule() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "*|bidderName|*", List.of(givenMultiplier("15")),
-                "*|*|*", List.of(givenMultiplier("25"))));
+        final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, banner, "seat", "bidderName", "dealId"))
+                .willReturn(List.of(givenMultiplier("15")));
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
                 BidRequest.builder().build(),
-                givenBidAdjustments,
-                ImpMediaType.banner,
+                banner,
+                "seat",
                 "bidderName",
                 "dealId");
 
@@ -111,19 +112,19 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldPickAndApplyRulesByWildcardBidder() {
+    public void resolveShouldApplyStaticAndCpmRules() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "*|bidderName|*", List.of(givenStatic("15", "EUR"), givenMultiplier("15")),
-                "*|*|*", List.of(givenStatic("25", "UAH"), givenMultiplier("25"))));
+        final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, banner, "seat", "bidderName", "dealId"))
+                .willReturn(List.of(givenStatic("25", "UAH"), givenMultiplier("25")));
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
                 BidRequest.builder().build(),
-                givenBidAdjustments,
-                ImpMediaType.banner,
-                "anotherBidderName",
+                banner,
+                "seat",
+                "bidderName",
                 "dealId");
 
         // then
@@ -132,19 +133,18 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldPickAndApplyRulesBySpecificDealId() {
+    public void resolveShouldApplyCpmAndStaticRules() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "*|*|dealId", List.of(givenCpm("15", "JPY"), givenStatic("15", "EUR")),
-                "*|*|*", List.of(givenCpm("25", "JPY"), givenStatic("25", "UAH"))));
         final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, banner, "seat", "bidderName", "dealId"))
+                .willReturn(List.of(givenCpm("15", "JPY"), givenStatic("15", "EUR")));
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
                 givenBidRequest,
-                givenBidAdjustments,
-                ImpMediaType.banner,
+                banner,
+                "seat",
                 "bidderName",
                 "dealId");
 
@@ -154,21 +154,20 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldPickAndApplyRulesByWildcardDealId() {
+    public void resolveShouldApplyMultiplierAdnCpmRules() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "*|*|dealId", List.of(givenMultiplier("15"), givenCpm("15", "EUR")),
-                "*|*|*", List.of(givenMultiplier("25"), givenCpm("25", "UAH"))));
         final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, banner, "seat", "bidderName", "dealId"))
+                .willReturn(List.of(givenMultiplier("25"), givenCpm("25", "UAH")));
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
                 givenBidRequest,
-                givenBidAdjustments,
-                ImpMediaType.banner,
+                banner,
+                "seat",
                 "bidderName",
-                "anotherDealId");
+                "dealId");
 
         // then
         assertThat(actual).isEqualTo(Price.of("USD", new BigDecimal("-225")));
@@ -176,19 +175,18 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldPickAndApplyRulesByWildcardDealIdWhenDealIdIsNull() {
+    public void resolveShouldApplyTwoCpmRules() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "*|*|dealId", List.of(givenCpm("15", "EUR"), givenCpm("15", "JPY")),
-                "*|*|*", List.of(givenCpm("25", "UAH"), givenCpm("25", "JPY"))));
         final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, banner, "seat", "bidderName", null))
+                .willReturn(List.of(givenCpm("25", "UAH"), givenCpm("25", "JPY")));
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
                 givenBidRequest,
-                givenBidAdjustments,
-                ImpMediaType.banner,
+                banner,
+                "seat",
                 "bidderName",
                 null);
 
@@ -199,17 +197,18 @@ public class BidAdjustmentsResolverTest extends VertxTest {
     }
 
     @Test
-    public void resolveShouldReturnEmptyListWhenNoMatchFound() {
+    public void resolveShouldNotApplyAnyRulesWhenNoMatchFound() {
         // given
-        final BidAdjustments givenBidAdjustments = BidAdjustments.of(Map.of(
-                "*|*|dealId", List.of(givenStatic("15", "EUR"))));
+        final BidRequest givenBidRequest = BidRequest.builder().build();
+        given(bidAdjustmentsRulesResolver.resolve(givenBidRequest, banner, "seat", "bidderName", null))
+                .willReturn(Collections.emptyList());
 
         // when
         final Price actual = target.resolve(
                 Price.of("USD", BigDecimal.ONE),
                 BidRequest.builder().build(),
-                givenBidAdjustments,
-                ImpMediaType.banner,
+                banner,
+                "seat",
                 "bidderName",
                 null);
 
@@ -218,24 +217,24 @@ public class BidAdjustmentsResolverTest extends VertxTest {
         verifyNoInteractions(currencyService);
     }
 
-    private static ExtRequestBidAdjustmentsRule givenStatic(String value, String currency) {
-        return ExtRequestBidAdjustmentsRule.builder()
+    private static BidAdjustmentsRule givenStatic(String value, String currency) {
+        return BidAdjustmentsRule.builder()
                 .adjType(STATIC)
                 .currency(currency)
                 .value(new BigDecimal(value))
                 .build();
     }
 
-    private static ExtRequestBidAdjustmentsRule givenCpm(String value, String currency) {
-        return ExtRequestBidAdjustmentsRule.builder()
+    private static BidAdjustmentsRule givenCpm(String value, String currency) {
+        return BidAdjustmentsRule.builder()
                 .adjType(CPM)
                 .currency(currency)
                 .value(new BigDecimal(value))
                 .build();
     }
 
-    private static ExtRequestBidAdjustmentsRule givenMultiplier(String value) {
-        return ExtRequestBidAdjustmentsRule.builder()
+    private static BidAdjustmentsRule givenMultiplier(String value) {
+        return BidAdjustmentsRule.builder()
                 .adjType(MULTIPLIER)
                 .value(new BigDecimal(value))
                 .build();
